# esp32-idf-sqlite3

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Examples/: README.md
Examples/esp_littlefs/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Examples/esp_littlefs/main/: CMakeLists.txt  main.c
Examples/spiffs/: CMakeLists.txt  README.md  sdkconfig.defaults
Examples/spiffs/main/: CMakeLists.txt  main.c
esp_sqlite3/: CMakeLists.txt
esp_sqlite3/private_include/: config_ext.h  shox96_0_2.h
esp_sqlite3/src/: shox96_0_2.c
include/: sqlite3.h
private_include/: config_ext.h
src/: esp32.c  shox96_0_2.c
